# be

./: .dockerignore  .editorconfig  .env.example  .env.secrets.example  .gitignore  CLAUDE.md  Dockerfile  build.gradle.kts  docker-compose.yml  fe-link-pages-announcement.md  post-api-deprecated-migration-slack.md  spring-rest-docs-openapi-통합-가이드.mdx
.github/workflows/: cd-dev.yml  test-coverage.yml  test-visibility.yml
.serena/: project.yml
.serena/memories/: comment-list-api-implementation.md  comment-test-duplicate-key-resolved.md  e2e-testcontainers-refactored.md  e2e-testing-setup-complete.md  integration-test-guide.md  post-detail-api-implementation.md
infra/: .dockerignore  .env.example  docker-compose.yml
main-server/: .env.example  .gitconfig  .gitignore  Dockerfile  README.md  build.gradle.kts
main-server/.serena/: project.yml
main-server/.serena/memories/: code_conventions.md  (+7 more)
otel-example-spring-java/: Dockerfile  build.gradle.kts  docker-compose.yml  settings.gradle.kts
otel-example-spring-java/otel/: otel-collector.yaml  tempo.yaml
otel-example-spring-java/prometheus/: prometheus.yml
scripts/: README.md  auth.py  pyproject.toml  setup-github-secrets.sh  test_presigned_upload.py
techtaurant-crawler/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  test.py
techtaurant-crawler/app/common/: base_response.py
techtaurant-crawler/app/common/api/v1/: router.py
techtaurant-crawler/app/common/utils/: browser_page_pool.py
techtaurant-crawler/app/configs/: app.py  base_status.py  config.py  database.py  exception_handler.py  exceptions.py  redis.py
techtaurant-crawler/app/domains/article_link/entity/: article_link.py
techtaurant-crawler/app/domains/article_link/infrastructure/: article_link_repository.py
techtaurant-crawler/app/domains/batch_log/entity/: batch_log.py
techtaurant-crawler/app/domains/batch_log/infrastructure/: batch_log_repository.py
techtaurant-crawler/app/domains/blog/entity/: blog.py
techtaurant-crawler/app/domains/blog/infrastructure/: blog_repository.py
techtaurant-crawler/app/domains/example/infrastructure/inport/: api.py  example_controller.py
techtaurant-crawler/app/domains/page_crawling/dto/: link_crawling_response.py  page_base_link_crawling_request.py
techtaurant-crawler/app/domains/page_crawling/entity/: page_base_link_crawler.py
techtaurant-crawler/app/domains/page_crawling/infrastructure/inport/: page_base_link_crawling_controller.py
techtaurant-crawler/app/domains/page_crawling/service/: page_base_crawler.py  page_base_crawling_service.py  page_base_link_crawling_service.py
techtaurant-crawler/tests/: conftest.py  test_example.py  test_health.py
(+665 files in other folders)
