[project]
name = "devdeb-api"
version = "1.0.0"
description = "DevDeb Backend API with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    # Redis
    "redis[hiredis]>=5.1.1",
    # Validation & Settings
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    # Utils
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "playwright>=1.56.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",

    # Linting & Formatting
    "ruff>=0.7.4",

    # Type Checking
    "mypy>=1.11.0",
    "types-redis>=4.6.0",

    # Pre-commit Hooks
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
# Ruff 설정
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# 활성화할 린트 규칙
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# 무시할 규칙
ignore = [
    "E501",  # line too long (formatter가 처리)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
# UTF-8 인코딩 사용
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
# MyPy 설정
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

# 외부 라이브러리 타입 무시
[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
]
ignore_missing_imports = true

# Pydantic MyPy Plugin 설정
[tool.pydantic-mypy]
# BaseSettings의 필드가 __init__에서 제공되지 않아도 에러 발생하지 않음 (.env에서 로드)
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
